# Glitch

./: .gitignore  AGENTS.md  Architecture.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  start-ui-sso.sh  start-ui.sh  start.sh
agent/: .bedrock_agentcore.yaml  .bedrock_agentcore.yaml.template  .dockerignore  Dockerfile  Makefile  SOUL.md  auri.md  mcp_servers.yaml  poet-soul.md  pyproject.toml  pytest.ini  requirements.txt  story-book.md
agent/docs/: MCP_INTEGRATION.md
agent/scripts/: README.md  auri_memory_migration.sql  check-auri-tools.py  check-runtime-logs.py  deploy.sh  diagnose-config.py  migrate_auri_split.py  post-deploy-verify.py  pre-deploy-configure.py  ssh-copy-key.py  ssh-setup.sh
agent/skills/glitch-agent-deploy/: metadata.json  skill.md
agent/skills/glitch-nginx-tailscale/: metadata.json  skill.md
agent/skills/glitch-protect-surveillance/: metadata.json  skill.md
agent/skills/glitch-telemetry-maintainer/: metadata.json  skill.md
agent/skills/incident-response/: metadata.json  skill.md
agent/skills/infrastructure-ops/: metadata.json  (+1 more)
agent/src/: main.py
agent/tests/: __init__.py  test_agent_registry.py  test_auri_integration.py  test_mcp_integration.py  test_mcp_loader.py  test_model_routing.py  test_moderation.py  test_moderation_integration.py  test_poet_agent.py  test_session.py  test_skill_integration.py  test_skill_loader.py  test_skill_selector.py  test_telemetry_cloudwatch.py  test_ui_proxy.py  test_ui_proxy_routes.py  test_ui_server.py
(+248 files in other folders)
