[project]
name = "glitch-agent"
version = "1.0.0"
description = "AgentCore Glitch - Hybrid AI Agent Orchestrator"
requires-python = ">=3.12"
dependencies = [
    "typing_extensions>=4.0.0",
    "strands-agents>=1.0.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
